# mytodo

./: .gitignore  Cargo.toml  Makefile.toml
backend/: Cargo.toml  Makefile.toml
backend/src/db/: mod.rs  models.rs  schema.rs
frontend/: Cargo.toml  Makefile.toml  index.html
frontend/css/: index.css
frontend/src/: lib.rs
migrations/2022-01-11-003622_task/: up.sql
migrations/2022-01-11-012013_done/: down.sql  up.sql
src/: lib.rs
