[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mytodo = { path = "../" }
diesel = { version = "1.4.8", features = ["sqlite"] }
rocket = "0.4.2"
rocket_contrib = { version = "0.4.10", features = ["json"], default-features = false }
serde = { version = "1.0.133", features = ["derive"] }
