[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
mytodo = { path = ".." }
futures = "^0.1.28"
wasm-bindgen = "^0.2.50"
web-sys = "^0.3.27"
seed = "0.8.0"
